2009-02-17  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Check that the cref attribute is
	  non-null before trying to use it when importing slashdoc sources.
	  Fixes #475852.
	* Test/DocTest-v1.cs: Add an <exception/> doc comment with an invalid
	  attribute value for testing.

2009-02-17  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/mdoc.cs: Set Environment.ExitCode=1 if an
	  exception occurs, so that calling code can determine that an error
	  occurred w/o resorting to parsing stderr.  Fixes #475746.

2009-02-16  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Support C#4 variant generics, e.g.
	  `delegate TRet Func<in TArg, out TRet>(TArg a)'.  Alas, this
	  required making MemberFormatter explicitly stateful, so any thoughts
	  of using instances w/o locking are now out the window...  (Not that
	  threads are currently used, but they're planned to be used...)
	  TODO: Add a test to Test/DocTest-v1.cs.  This wasn't done as the
	  current gmcs support doesn't like intermixing variance with generic
	  parameter attributes, and I don't want to introduce a new delegate
	  type (and the ~6 new files that would imply) just for this feature.

2009-02-10  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Cleanup: turn static data into
	  instance data (for future Threading changes, as only static data
	  will be tracked for thread-safety); use MDocCommand.Message() and
	  MDocCommand.Error() for message reporting; remove warnings.

2009-01-05  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Fix $(PROGRAM) dependencies so that mdoc.exe is rebuilt
	  when one of the dependent ../monodoc/Resources/* files is changed.

2009-01-05  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/mdoc.cs: `mdoc' (no arguments) shouldn't print an
	  index out of range error.  Fix.
	* Mono.Documentation/monodocer.cs: Rename -fno-member-assembly-info to